--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,62 +1,83 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f8f9fa;
-    }
-    
-    .container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    
-    h1 {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    background-color: #f0f0f0;
+}
+
+h1 {
+    font-size: 24px;
+    margin-top: 0;
     color: #333;
-    }
-    
-    .input-container {
-    margin-bottom: 20px;
-    }
-    
-    input[type="text"] {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 70%;
-    }
-    
-    button {
-    padding: 8px 16px;
-    border: none;
-    border-radius: 3px;
-    background-color: #007bff;
+    margin-bottom: 10px;
+}
+
+#nueva-tarea {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+#agregar-tarea {
+    padding: 10px 20px;
+    background-color: #000;
     color: #fff;
+    border: none;
     cursor: pointer;
-    }
-    
-    button:hover {
-    background-color: #0056b3;
-    }
-    
-    ul {
-    list-style-type: none;
+}
+
+#lista-tareas {
+    list-style: none;
     padding: 0;
-    }
-    
-    li {
-    padding: 8px;
-    border-bottom: 1px solid #ccc;
-    }
-    
-    .completed {
+    margin: 0;
+    width: 50%;
+}
+
+#lista-tareas li {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+}
+
+#lista-tareas li input {
+    margin-right: 10px;
+}
+
+#lista-tareas li label {
+    cursor: pointer;
+    flex: 1;
+    text-align: left;
+}
+
+#lista-tareas li .eliminar {
+    padding: 5px 10px;
+    background-color: #ccc;
+    border: none;
+    cursor: pointer;
+}
+
+#lista-tareas li.completada {
+    background-color: #f9f9f9;
     text-decoration: line-through;
-    color: #aaa;
-    }
+}
+
+
+
+
+  
     
 
   
