--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,13 +5,12 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
 }
 
-h1 {
-    font-size: 24px;
-    margin-top: 0;
-    color: #333;
+img{
+    border-radius: 40px;
+    margin: 20px;
 }
 
 .input-container {
@@ -24,17 +23,29 @@ h1 {
 
 #nueva-tarea {
     flex: 1;
-    padding: 10px;
+    padding: 15px;
     border: 1px solid #ccc;
+    border-radius: 5px 0 0 5px;
+    font-size: 15px;
 }
 
 #agregar-tarea {
-    padding: 10px 20px;
-    background-color: #000;
+    padding: 20px 20px;
+    background-color: #09d4ee;
     color: #fff;
     border: none;
     cursor: pointer;
+    border-radius: 0 5px 5px 0;
 }
+
+#agregar-tarea i {
+    margin-right: 5px;
+}
+
+#agregar-tarea span {
+    display: inline-block;
+}
+
 
 #lista-tareas {
     list-style: none;
@@ -64,15 +75,91 @@ h1 {
 
 #lista-tareas li .eliminar {
     padding: 5px 10px;
-    background-color: #ccc;
+    background-color: #09d4ee;
     border: none;
     cursor: pointer;
+    border-radius: 3px;
+    color: white;
 }
 
 #lista-tareas li.completada {
-    background-color: #f9f9f9;
+    background-color: #09d3ee2c;
+    border-left: 5px solid #09d4ee; /* Color fuerte en el borde izquierdo */
+}
+
+#lista-tareas li.completada label {
     text-decoration: line-through;
 }
+
+@media (max-width: 480px) {
+    img {
+        width: 80%;
+        margin: 10px;
+    }
+    .input-container {
+        width: 90%;
+    }
+
+    #nueva-tarea {
+        font-size: 14px;
+    }
+
+    #agregar-tarea {
+        padding: 15px;
+    }
+
+    #lista-tareas {
+        width: 90%;
+    }
+}
+
+/* Estilos para tablets */
+@media (min-width: 481px) and (max-width: 1024px) {
+    img {
+        width: 60%;
+        margin: 15px;
+    }
+    .input-container {
+        width: 80%;
+    }
+
+    #nueva-tarea {
+        font-size: 16px;
+    }
+
+    #agregar-tarea {
+        padding: 18px;
+    }
+
+    #lista-tareas {
+        width: 80%;
+    }
+}
+
+/* Estilos para escritorios */
+@media (min-width: 1025px) {
+    img {
+        width: 40%;
+        margin: 20px;
+    }
+    .input-container {
+        width: 60%;
+    }
+
+    #nueva-tarea {
+        font-size: 18px;
+    }
+
+    #agregar-tarea {
+        padding: 20px;
+    }
+
+    #lista-tareas {
+        width: 50%;
+    }
+}
+
+
 
 
 
