--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,12 +5,32 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: #ffffff;
+    background-color: #ffdfdf; /* Fondo rosadito */
 }
 
-img{
+.container {
+    background-color: #fff; /* Fondo blanco */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+    margin-top: 20px; /* Espacio superior */
+    width: 70%; /* Ancho del contenedor */
+    max-width: 600px; /* Ancho máximo */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container img {
+    width: 100%;
+    height: auto;
+}
+
+img {
     border-radius: 40px;
     margin: 20px;
+    width: 100%; /* Ancho al 100% del contenedor */
+    height: auto; /* Altura automática para mantener la proporción */
 }
 
 .input-container {
@@ -22,6 +42,7 @@ img{
 }
 
 #nueva-tarea {
+    justify-content: center;
     flex: 1;
     padding: 15px;
     border: 1px solid #ccc;
@@ -45,7 +66,6 @@ img{
 #agregar-tarea span {
     display: inline-block;
 }
-
 
 #lista-tareas {
     list-style: none;
@@ -90,6 +110,37 @@ img{
 #lista-tareas li.completada label {
     text-decoration: line-through;
 }
+
+/* Mobile */
+@media (max-width: 480px) {
+    .container {
+        width: 90%;
+    }
+    #lista-tareas {
+        width: 90%;
+    }
+}
+
+/* Tablet */
+@media (min-width: 481px) and (max-width: 1024px) {
+    .container {
+        width: 80%;
+    }
+    #lista-tareas {
+        width: 80%;
+    }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
+    .container {
+        width: 70%;
+    }
+    #lista-tareas {
+        width: 70%;
+    }
+}
+
 
 @media (max-width: 480px) {
     img {
